--- a/package.json
+++ b/package.json
@@ -5,16 +5,16 @@
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.16.2",
-    "mongoose": "^4.13.0",
-    "react": "^16.0.0",
-    "react-dom": "^16.0.0",
+    "mongoose": "^4.13.5",
+    "react": "^16.1.1",
+    "react-dom": "^16.1.1",
     "react-redux": "^5.0.6",
     "react-scripts": "1.0.17",
     "redux": "^3.7.2"
   },
   "scripts": {
     "start": "node server",
-    "start-dev": "node scripts/start",
+    "dev": "nodemon server & node scripts/start",
     "build": "node scripts/build",
     "test": "react-scripts test --env=jsdom",
     "eject": "react-scripts eject"
