--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "merchantjs",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://holmichapp.herokuapp.com",
   "dependencies": {
     "compression": "^1.7.1",
     "express": "^4.16.2",
